Improved variables names

--- a/lab_5/ray-homework.ipynb
+++ b/lab_5/ray-homework.ipynb
@@ -113,8 +113,8 @@
     "        for idx, chunk in enumerate(chunks):\n",
     "            replicas = [node_ids[(idx + r) % len(node_ids)] for r in range(REPLICATION_FACTOR)]\n",
     "            self.locations[artifact_id][idx] = replicas\n",
-    "            for nid in replicas:\n",
-    "                self.nodes[nid].store_chunk.remote(artifact_id, idx, chunk)\n",
+    "            for n_id in replicas:\n",
+    "                self.nodes[n_id].store_chunk.remote(artifact_id, idx, chunk)\n",
     "        return True\n",
     "\n",
     "    def get_artifact(self, artifact_id):\n",
@@ -123,8 +123,8 @@
     "        total = self.metadata[artifact_id]['chunks']\n",
     "        result = []\n",
     "        for idx in range(total):\n",
-    "            for nid in self.locations[artifact_id][idx]:\n",
-    "                node = self.nodes[nid]\n",
+    "            for n_id in self.locations[artifact_id][idx]:\n",
+    "                node = self.nodes[n_id]\n",
     "                if ray.get(node.is_alive.remote()):\n",
     "                    data = ray.get(node.get_chunk.remote(artifact_id, idx))\n",
     "                    result.append(data)\n",
@@ -140,9 +140,9 @@
     "\n",
     "    def delete_artifact(self, artifact_id):\n",
     "        for idx, nodes in self.locations.get(artifact_id, {}).items():\n",
-    "            for nid in nodes:\n",
-    "                if nid in self.nodes:\n",
-    "                    self.nodes[nid].delete_artifact.remote(artifact_id)\n",
+    "            for n_id in nodes:\n",
+    "                if n_id in self.nodes:\n",
+    "                    self.nodes[n_id].delete_artifact.remote(artifact_id)\n",
     "        self.metadata.pop(artifact_id, None)\n",
     "        self.locations.pop(artifact_id, None)\n",
     "        return True\n",
@@ -177,6 +177,7 @@
     "node_with_options = StorageNode.options(name=\"node-special\", num_cpus=0.5).remote(\"node-special\")\n",
     "nodes['node-special'] = node_with_options\n",
     "ray.get(name_node.register_node.remote(\"node-special\", node_with_options))\n",
+    "\n",
     "# PUT\n",
     "long_data = 'A' * 5000\n",
     "ray.get(name_node.put_artifact.remote('art1', 'TestArtifact', long_data))\n",
